--- a/src/style.css
+++ b/src/style.css
@@ -117,3 +117,8 @@ section {
   padding: 40px 20px 0;
   background-color: var(--color-main);
 }
+
+.voltar_link {
+  align-self: flex-start;
+  color: var(--color-text);
+}
